--- a/output/tables/table19.html
+++ b/output/tables/table19.html
@@ -3,37 +3,37 @@
 <tr><td></td><td colspan="3" style="border-bottom: 1px solid black"></td></tr>
 <tr><td style="text-align:left"></td><td>Brecha Percibida</td><td colspan="2">Brecha Justa</td></tr>
 <tr><td style="text-align:left"></td><td>(1)</td><td>(2)</td><td>(3)</td></tr>
-<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Ed.Media</td><td>0.053</td><td>-0.073</td><td>-0.012</td></tr>
-<tr><td style="text-align:left"></td><td>(0.089)</td><td>(0.097)</td><td>(0.092)</td></tr>
+<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Ed.Media</td><td>0.245<sup>***</sup></td><td>0.207<sup>***</sup></td><td>0.076</td></tr>
+<tr><td style="text-align:left"></td><td>(0.075)</td><td>(0.077)</td><td>(0.062)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Ed.Sup.Incomp.</td><td>0.190</td><td>-0.339<sup>*</sup></td><td>-0.109</td></tr>
-<tr><td style="text-align:left"></td><td>(0.157)</td><td>(0.179)</td><td>(0.166)</td></tr>
+<tr><td style="text-align:left">Ed.Sup.Incomp.</td><td>0.187</td><td>0.149</td><td>0.068</td></tr>
+<tr><td style="text-align:left"></td><td>(0.132)</td><td>(0.137)</td><td>(0.109)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Ed.Universitaria</td><td>0.266<sup>*</sup></td><td>-0.321<sup>**</sup></td><td>-0.085</td></tr>
-<tr><td style="text-align:left"></td><td>(0.146)</td><td>(0.158)</td><td>(0.148)</td></tr>
+<tr><td style="text-align:left">Ed.Universitaria</td><td>0.419<sup>***</sup></td><td>0.495<sup>***</sup></td><td>0.172</td></tr>
+<tr><td style="text-align:left"></td><td>(0.132)</td><td>(0.135)</td><td>(0.109)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Quintil 2</td><td>0.054</td><td>-0.014</td><td>-0.001</td></tr>
-<tr><td style="text-align:left"></td><td>(0.127)</td><td>(0.141)</td><td>(0.134)</td></tr>
+<tr><td style="text-align:left">Quintil 2</td><td>0.102</td><td>0.023</td><td>-0.018</td></tr>
+<tr><td style="text-align:left"></td><td>(0.103)</td><td>(0.107)</td><td>(0.085)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Quintil 3</td><td>0.061</td><td>-0.003</td><td>0.067</td></tr>
-<tr><td style="text-align:left"></td><td>(0.126)</td><td>(0.141)</td><td>(0.132)</td></tr>
+<tr><td style="text-align:left">Quintil 3</td><td>0.153</td><td>0.192<sup>*</sup></td><td>0.119</td></tr>
+<tr><td style="text-align:left"></td><td>(0.103)</td><td>(0.106)</td><td>(0.085)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Quintil 2</td><td>0.128</td><td>0.039</td><td>0.126</td></tr>
-<tr><td style="text-align:left"></td><td>(0.127)</td><td>(0.141)</td><td>(0.132)</td></tr>
+<tr><td style="text-align:left">Quintil 2</td><td>0.274<sup>***</sup></td><td>0.241<sup>**</sup></td><td>0.109</td></tr>
+<tr><td style="text-align:left"></td><td>(0.104)</td><td>(0.107)</td><td>(0.086)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Quintil 5</td><td>0.200</td><td>-0.227</td><td>-0.175</td></tr>
-<tr><td style="text-align:left"></td><td>(0.130)</td><td>(0.144)</td><td>(0.135)</td></tr>
+<tr><td style="text-align:left">Quintil 5</td><td>0.282<sup>**</sup></td><td>0.431<sup>***</sup></td><td>0.259<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td>(0.116)</td><td>(0.121)</td><td>(0.096)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Brecha Percibida</td><td></td><td></td><td>-0.439<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td></td><td></td><td>(0.040)</td></tr>
+<tr><td style="text-align:left">Brecha Percibida</td><td></td><td></td><td>0.622<sup>***</sup></td></tr>
+<tr><td style="text-align:left"></td><td></td><td></td><td>(0.026)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td style="text-align:left">Constant</td><td>2.851<sup>***</sup></td><td>-1.760<sup>***</sup></td><td>-0.577<sup>***</sup></td></tr>
-<tr><td style="text-align:left"></td><td>(0.098)</td><td>(0.108)</td><td>(0.155)</td></tr>
+<tr><td style="text-align:left">Constant</td><td>3.233<sup>***</sup></td><td>2.093<sup>***</sup></td><td>0.053</td></tr>
+<tr><td style="text-align:left"></td><td>(0.076)</td><td>(0.079)</td><td>(0.105)</td></tr>
 <tr><td style="text-align:left"></td><td></td><td></td><td></td></tr>
-<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>652</td><td>620</td><td>575</td></tr>
-<tr><td style="text-align:left">R<sup>2</sup></td><td>0.017</td><td>0.026</td><td>0.192</td></tr>
-<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.006</td><td>0.014</td><td>0.180</td></tr>
-<tr><td style="text-align:left">Residual Std. Error</td><td>0.988 (df = 644)</td><td>1.060 (df = 612)</td><td>0.956 (df = 566)</td></tr>
-<tr><td style="text-align:left">F Statistic</td><td>1.546 (df = 7; 644)</td><td>2.294<sup>**</sup> (df = 7; 612)</td><td>16.762<sup>***</sup> (df = 8; 566)</td></tr>
+<tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">Observations</td><td>1,039</td><td>1,033</td><td>1,009</td></tr>
+<tr><td style="text-align:left">R<sup>2</sup></td><td>0.041</td><td>0.062</td><td>0.402</td></tr>
+<tr><td style="text-align:left">Adjusted R<sup>2</sup></td><td>0.035</td><td>0.055</td><td>0.398</td></tr>
+<tr><td style="text-align:left">Residual Std. Error</td><td>1.032 (df = 1031)</td><td>1.060 (df = 1025)</td><td>0.837 (df = 1000)</td></tr>
+<tr><td style="text-align:left">F Statistic</td><td>6.363<sup>***</sup> (df = 7; 1031)</td><td>9.642<sup>***</sup> (df = 7; 1025)</td><td>84.159<sup>***</sup> (df = 8; 1000)</td></tr>
 <tr><td colspan="4" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"><em>Note:</em></td><td colspan="3" style="text-align:right"><sup>*</sup>p<0.1; <sup>**</sup>p<0.05; <sup>***</sup>p<0.01</td></tr>
 </table>
