--- a/output/tables/desc.html
+++ b/output/tables/desc.html
@@ -1,118 +1,312 @@
-<table class="table" style="margin-left: auto; margin-right: auto;">
+<table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
  <thead>
   <tr>
+   <th style="text-align:left;"> Año </th>
    <th style="text-align:left;"> Dimensión </th>
    <th style="text-align:left;"> N </th>
-   <th style="text-align:right;"> Variable/niveles </th>
-   <th style="text-align:left;"> Media(DS) </th>
-   <th style="text-align:right;"> Min </th>
-   <th style="text-align:right;"> Max </th>
+   <th style="text-align:left;"> Variable/nivel </th>
+   <th style="text-align:left;"> Media(DS)/% </th>
+   <th style="text-align:left;"> Min </th>
+   <th style="text-align:left;"> Max </th>
   </tr>
  </thead>
 <tbody>
   <tr>
+   <td style="text-align:left;vertical-align: middle !important;" rowspan="11"> 1999 </td>
    <td style="text-align:left;vertical-align: middle !important;" rowspan="2"> Brecha Salarial </td>
    <td style="text-align:left;"> Percibida </td>
-   <td style="text-align:right;"> 3213 </td>
-   <td style="text-align:left;"> 3.39 (1.07) </td>
-   <td style="text-align:right;"> -0.29 </td>
-   <td style="text-align:right;"> 7.13 </td>
+   <td style="text-align:left;"> 891 </td>
+   <td style="text-align:left;"> 3.54 (1.11) </td>
+   <td style="text-align:left;"> 0.92 </td>
+   <td style="text-align:left;"> 7.13 </td>
   </tr>
   <tr>
+   
    
    <td style="text-align:left;"> Justa </td>
-   <td style="text-align:right;"> 3101 </td>
-   <td style="text-align:left;"> 2.29 (1.09) </td>
-   <td style="text-align:right;"> -3.98 </td>
-   <td style="text-align:right;"> 7.60 </td>
+   <td style="text-align:left;"> 848 </td>
+   <td style="text-align:left;"> 2.42 (1.11) </td>
+   <td style="text-align:left;"> -3.98 </td>
+   <td style="text-align:left;"> 7.60 </td>
   </tr>
   <tr>
+   
    <td style="text-align:left;vertical-align: middle !important;" rowspan="4"> Educación </td>
    <td style="text-align:left;"> Ed.Básica </td>
-   <td style="text-align:right;"> 2131 </td>
-   <td style="text-align:left;"> 49 </td>
-   <td style="text-align:right;">  </td>
-   <td style="text-align:right;">  </td>
+   <td style="text-align:left;"> 327 </td>
+   <td style="text-align:left;"> 47.6 </td>
+   <td style="text-align:left;">  </td>
+   <td style="text-align:left;">  </td>
   </tr>
   <tr>
+   
    
    <td style="text-align:left;"> Ed.Media </td>
-   <td style="text-align:right;"> 1443 </td>
-   <td style="text-align:left;"> 33.2 </td>
-   <td style="text-align:right;">  </td>
-   <td style="text-align:right;">  </td>
+   <td style="text-align:left;"> 212 </td>
+   <td style="text-align:left;"> 30.86 </td>
+   <td style="text-align:left;">  </td>
+   <td style="text-align:left;">  </td>
   </tr>
   <tr>
+   
    
    <td style="text-align:left;"> Ed.Sup.Incomp. </td>
-   <td style="text-align:right;"> 395 </td>
-   <td style="text-align:left;"> 9.1 </td>
-   <td style="text-align:right;">  </td>
-   <td style="text-align:right;">  </td>
+   <td style="text-align:left;"> 96 </td>
+   <td style="text-align:left;"> 13.97 </td>
+   <td style="text-align:left;">  </td>
+   <td style="text-align:left;">  </td>
   </tr>
   <tr>
+   
    
    <td style="text-align:left;"> Ed.Universitaria </td>
-   <td style="text-align:right;"> 383 </td>
-   <td style="text-align:left;"> 8.8 </td>
-   <td style="text-align:right;">  </td>
-   <td style="text-align:right;">  </td>
+   <td style="text-align:left;"> 52 </td>
+   <td style="text-align:left;"> 7.57 </td>
+   <td style="text-align:left;">  </td>
+   <td style="text-align:left;">  </td>
   </tr>
   <tr>
+   
    <td style="text-align:left;vertical-align: middle !important;" rowspan="5"> Ingreso </td>
    <td style="text-align:left;"> Quintil 1 </td>
-   <td style="text-align:right;"> 666 </td>
-   <td style="text-align:left;"> 20 </td>
-   <td style="text-align:right;">  </td>
-   <td style="text-align:right;">  </td>
+   <td style="text-align:left;"> 258 </td>
+   <td style="text-align:left;"> 13462.04 </td>
+   <td style="text-align:left;"> 4500.00 </td>
+   <td style="text-align:left;"> 21722.22 </td>
   </tr>
   <tr>
+   
    
    <td style="text-align:left;"> Quintil 2 </td>
-   <td style="text-align:right;"> 665 </td>
-   <td style="text-align:left;"> 20 </td>
-   <td style="text-align:right;">  </td>
-   <td style="text-align:right;">  </td>
+   <td style="text-align:left;"> 258 </td>
+   <td style="text-align:left;"> 28027.83 </td>
+   <td style="text-align:left;"> 21863.64 </td>
+   <td style="text-align:left;"> 35166.67 </td>
   </tr>
   <tr>
+   
    
    <td style="text-align:left;"> Quintil 3 </td>
-   <td style="text-align:right;"> 665 </td>
-   <td style="text-align:left;"> 20 </td>
-   <td style="text-align:right;">  </td>
-   <td style="text-align:right;">  </td>
+   <td style="text-align:left;"> 258 </td>
+   <td style="text-align:left;"> 44440.45 </td>
+   <td style="text-align:left;"> 35166.67 </td>
+   <td style="text-align:left;"> 52750.00 </td>
   </tr>
   <tr>
+   
    
    <td style="text-align:left;"> Quintil 4 </td>
-   <td style="text-align:right;"> 665 </td>
-   <td style="text-align:left;"> 20 </td>
-   <td style="text-align:right;">  </td>
-   <td style="text-align:right;">  </td>
+   <td style="text-align:left;"> 258 </td>
+   <td style="text-align:left;"> 68332.34 </td>
+   <td style="text-align:left;"> 52750.00 </td>
+   <td style="text-align:left;"> 99100.00 </td>
   </tr>
   <tr>
+   
    
    <td style="text-align:left;"> Quintil 5 </td>
-   <td style="text-align:right;"> 665 </td>
-   <td style="text-align:left;"> 20 </td>
-   <td style="text-align:right;">  </td>
-   <td style="text-align:right;">  </td>
+   <td style="text-align:left;"> 258 </td>
+   <td style="text-align:left;"> 234234.89 </td>
+   <td style="text-align:left;"> 99100.00 </td>
+   <td style="text-align:left;"> 2000000.00 </td>
   </tr>
   <tr>
-   <td style="text-align:left;vertical-align: middle !important;" rowspan="2"> Pref. Redistributivas </td>
-   <td style="text-align:left;"> Desacuerdo </td>
-   <td style="text-align:right;"> 1028 </td>
-   <td style="text-align:left;"> 24.2 </td>
-   <td style="text-align:right;">  </td>
-   <td style="text-align:right;">  </td>
+   <td style="text-align:left;vertical-align: middle !important;" rowspan="11"> 2009 </td>
+   <td style="text-align:left;vertical-align: middle !important;" rowspan="2"> Brecha Salarial </td>
+   <td style="text-align:left;"> Percibida </td>
+   <td style="text-align:left;"> 1305 </td>
+   <td style="text-align:left;"> 3.5 (1.06) </td>
+   <td style="text-align:left;"> 0.29 </td>
+   <td style="text-align:left;"> 6.62 </td>
   </tr>
   <tr>
    
-   <td style="text-align:left;"> De Acuerdo </td>
-   <td style="text-align:right;"> 3224 </td>
-   <td style="text-align:left;"> 75.8 </td>
-   <td style="text-align:right;">  </td>
-   <td style="text-align:right;">  </td>
+   
+   <td style="text-align:left;"> Justa </td>
+   <td style="text-align:left;"> 1291 </td>
+   <td style="text-align:left;"> 2.4 (1.07) </td>
+   <td style="text-align:left;"> -1.83 </td>
+   <td style="text-align:left;"> 6.91 </td>
+  </tr>
+  <tr>
+   
+   <td style="text-align:left;vertical-align: middle !important;" rowspan="4"> Educación </td>
+   <td style="text-align:left;"> Ed.Básica </td>
+   <td style="text-align:left;"> 493 </td>
+   <td style="text-align:left;"> 49.4 </td>
+   <td style="text-align:left;">  </td>
+   <td style="text-align:left;">  </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Ed.Media </td>
+   <td style="text-align:left;"> 331 </td>
+   <td style="text-align:left;"> 33.17 </td>
+   <td style="text-align:left;">  </td>
+   <td style="text-align:left;">  </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Ed.Sup.Incomp. </td>
+   <td style="text-align:left;"> 73 </td>
+   <td style="text-align:left;"> 7.31 </td>
+   <td style="text-align:left;">  </td>
+   <td style="text-align:left;">  </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Ed.Universitaria </td>
+   <td style="text-align:left;"> 101 </td>
+   <td style="text-align:left;"> 10.12 </td>
+   <td style="text-align:left;">  </td>
+   <td style="text-align:left;">  </td>
+  </tr>
+  <tr>
+   
+   <td style="text-align:left;vertical-align: middle !important;" rowspan="5"> Ingreso </td>
+   <td style="text-align:left;"> Quintil 1 </td>
+   <td style="text-align:left;"> 238 </td>
+   <td style="text-align:left;"> 39782.34 </td>
+   <td style="text-align:left;"> 6428.57 </td>
+   <td style="text-align:left;"> 55166.67 </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Quintil 2 </td>
+   <td style="text-align:left;"> 237 </td>
+   <td style="text-align:left;"> 67741.41 </td>
+   <td style="text-align:left;"> 55166.67 </td>
+   <td style="text-align:left;"> 82583.33 </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Quintil 3 </td>
+   <td style="text-align:left;"> 237 </td>
+   <td style="text-align:left;"> 109568.52 </td>
+   <td style="text-align:left;"> 82583.33 </td>
+   <td style="text-align:left;"> 135500.00 </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Quintil 4 </td>
+   <td style="text-align:left;"> 237 </td>
+   <td style="text-align:left;"> 208090.95 </td>
+   <td style="text-align:left;"> 135500.00 </td>
+   <td style="text-align:left;"> 266833.33 </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Quintil 5 </td>
+   <td style="text-align:left;"> 237 </td>
+   <td style="text-align:left;"> 558130.57 </td>
+   <td style="text-align:left;"> 266833.33 </td>
+   <td style="text-align:left;"> 2500000.00 </td>
+  </tr>
+  <tr>
+   <td style="text-align:left;vertical-align: middle !important;" rowspan="11"> 2019 </td>
+   <td style="text-align:left;vertical-align: middle !important;" rowspan="2"> Brecha Salarial </td>
+   <td style="text-align:left;"> Percibida </td>
+   <td style="text-align:left;"> 1305 </td>
+   <td style="text-align:left;"> 3.5 (1.06) </td>
+   <td style="text-align:left;"> 0.29 </td>
+   <td style="text-align:left;"> 6.62 </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Justa </td>
+   <td style="text-align:left;"> 1291 </td>
+   <td style="text-align:left;"> 2.4 (1.07) </td>
+   <td style="text-align:left;"> -1.83 </td>
+   <td style="text-align:left;"> 6.91 </td>
+  </tr>
+  <tr>
+   
+   <td style="text-align:left;vertical-align: middle !important;" rowspan="4"> Educación </td>
+   <td style="text-align:left;"> Ed.Básica </td>
+   <td style="text-align:left;"> 198 </td>
+   <td style="text-align:left;"> 34.8 </td>
+   <td style="text-align:left;">  </td>
+   <td style="text-align:left;">  </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Ed.Media </td>
+   <td style="text-align:left;"> 264 </td>
+   <td style="text-align:left;"> 46.4 </td>
+   <td style="text-align:left;">  </td>
+   <td style="text-align:left;">  </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Ed.Sup.Incomp. </td>
+   <td style="text-align:left;"> 42 </td>
+   <td style="text-align:left;"> 7.38 </td>
+   <td style="text-align:left;">  </td>
+   <td style="text-align:left;">  </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Ed.Universitaria </td>
+   <td style="text-align:left;"> 65 </td>
+   <td style="text-align:left;"> 11.42 </td>
+   <td style="text-align:left;">  </td>
+   <td style="text-align:left;">  </td>
+  </tr>
+  <tr>
+   
+   <td style="text-align:left;vertical-align: middle !important;" rowspan="5"> Ingreso </td>
+   <td style="text-align:left;"> Quintil 1 </td>
+   <td style="text-align:left;"> 170 </td>
+   <td style="text-align:left;"> 78194.75 </td>
+   <td style="text-align:left;"> 9000.00 </td>
+   <td style="text-align:left;"> 120250.00 </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Quintil 2 </td>
+   <td style="text-align:left;"> 170 </td>
+   <td style="text-align:left;"> 168242.87 </td>
+   <td style="text-align:left;"> 120250.00 </td>
+   <td style="text-align:left;"> 208333.33 </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Quintil 3 </td>
+   <td style="text-align:left;"> 170 </td>
+   <td style="text-align:left;"> 259078.92 </td>
+   <td style="text-align:left;"> 208333.33 </td>
+   <td style="text-align:left;"> 312500.00 </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Quintil 4 </td>
+   <td style="text-align:left;"> 170 </td>
+   <td style="text-align:left;"> 382544.12 </td>
+   <td style="text-align:left;"> 312500.00 </td>
+   <td style="text-align:left;"> 437500.00 </td>
+  </tr>
+  <tr>
+   
+   
+   <td style="text-align:left;"> Quintil 5 </td>
+   <td style="text-align:left;"> 170 </td>
+   <td style="text-align:left;"> 802490.76 </td>
+   <td style="text-align:left;"> 437500.00 </td>
+   <td style="text-align:left;"> 4000000.00 </td>
   </tr>
 </tbody>
 </table>
