create docs folder for website

--- a/index.html
+++ b/index.html
@@ -484,10 +484,13 @@ $(document).ready(function () {
         <li>
   <a href="paper.html">Paper</a>
 </li>
+<li>
+  <a href="script/data-prep-B.html">Análisis</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="https://github.com/juancarloscastillo/equal_pay">
+  <a href="https://github.com/juancarloscastillo/chilegapstime">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
