--- a/index.html
+++ b/index.html
@@ -290,7 +290,10 @@ $(document).ready(function () {
 <div id="changes-in-perception-and-justification-of-inequality-in-chile-1999-2019" class="section level1">
 <h1>Changes in perception and justification of inequality in Chile 1999-2019</h1>
 <p>(repo chilegapstime)</p>
-<p>link: <a href="https://juancarloscastillo.github.io/chilegapstime/">https://juancarloscastillo.github.io/chilegapstime/</a></p>
+<ul>
+<li><p>Project webpage: <a href="https://juancarloscastillo.github.io/chilegapstime/">https://juancarloscastillo.github.io/chilegapstime/</a></p></li>
+<li><p>Presentation UTokio Conference: Rethinking Inequalities <a href="https://juancarloscastillo.github.io/chilegapstime/docs/prestokio2020/castillo20202tokio.html">here</a> (January 2020).</p></li>
+</ul>
 </div>
 
 
